{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 197,
  "lineage": "0b2f617f-3918-e975-08f3-06b19acd2d5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ob-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb446ad019a2962b",
            "arn": "arn:aws:ec2:us-east-1:251973000121:elastic-ip/eipalloc-0eb446ad019a2962b",
            "domain": "vpc",
            "id": "eipalloc-0eb446ad019a2962b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-214-229-30.compute-1.amazonaws.com",
            "public_ip": "44.214.229.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ob-nat-eip"
            },
            "tags_all": {
              "Name": "ob-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ob-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:internet-gateway/igw-0aac177abc90ac005",
            "id": "igw-0aac177abc90ac005",
            "owner_id": "251973000121",
            "tags": {
              "Name": "terraform-ob-gw"
            },
            "tags_all": {
              "Name": "terraform-ob-gw"
            },
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ob-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:loadbalancer/app/ob-lb/db7107c7ced33d6e",
            "arn_suffix": "app/ob-lb/db7107c7ced33d6e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ob-lb-414599940.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:251973000121:loadbalancer/app/ob-lb/db7107c7ced33d6e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ob-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0140055e0df47a9ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b712e1b21583771"
              },
              {
                "subnet_id": "subnet-073830bddb1243b24"
              }
            ],
            "subnets": [
              "subnet-04b712e1b21583771",
              "subnet-073830bddb1243b24"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e3e0475841df768c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ob-sg",
            "aws_subnet.ob-private-subnet",
            "aws_subnet.ob-private-subnet2",
            "aws_subnet.ob-public-subnet",
            "aws_subnet.ob-public-subnet2",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ob-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:listener/app/ob-lb/db7107c7ced33d6e/87e08a4f4f726961",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:targetgroup/ob-tg/b93cc400e2ef3ee6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:251973000121:listener/app/ob-lb/db7107c7ced33d6e/87e08a4f4f726961",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:loadbalancer/app/ob-lb/db7107c7ced33d6e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ob-lb",
            "aws_lb_target_group.ob-tg",
            "aws_security_group.ob-sg",
            "aws_subnet.ob-private-subnet",
            "aws_subnet.ob-private-subnet2",
            "aws_subnet.ob-public-subnet",
            "aws_subnet.ob-public-subnet2",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ob-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:targetgroup/ob-tg/b93cc400e2ef3ee6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:listener-rule/app/ob-lb/db7107c7ced33d6e/87e08a4f4f726961/49a03dbbd46b007d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:251973000121:listener-rule/app/ob-lb/db7107c7ced33d6e/87e08a4f4f726961/49a03dbbd46b007d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:listener/app/ob-lb/db7107c7ced33d6e/87e08a4f4f726961",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ob-lb",
            "aws_lb_listener.ob-listener",
            "aws_lb_target_group.ob-tg",
            "aws_security_group.ob-sg",
            "aws_subnet.ob-private-subnet",
            "aws_subnet.ob-private-subnet2",
            "aws_subnet.ob-public-subnet",
            "aws_subnet.ob-public-subnet2",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ob-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:251973000121:targetgroup/ob-tg/b93cc400e2ef3ee6",
            "arn_suffix": "targetgroup/ob-tg/b93cc400e2ef3ee6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:251973000121:targetgroup/ob-tg/b93cc400e2ef3ee6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ob-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ob-nigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb446ad019a2962b",
            "association_id": "eipassoc-03fe9605ad958fdaa",
            "connectivity_type": "public",
            "id": "nat-0715bb0a602308322",
            "network_interface_id": "eni-0078afc55d154228d",
            "private_ip": "10.0.1.92",
            "public_ip": "44.214.229.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b712e1b21583771",
            "tags": {
              "Name": "ob-nigw"
            },
            "tags_all": {
              "Name": "ob-nigw"
            }
          },
          "dependencies": [
            "aws_eip.ob-nat-eip",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ob-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:route-table/rtb-0ec5f8db21adf970e",
            "id": "rtb-0ec5f8db21adf970e",
            "owner_id": "251973000121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0715bb0a602308322",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ob-private-route-table"
            },
            "tags_all": {
              "Name": "ob-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ob-nat-eip",
            "aws_nat_gateway.ob-nigw",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ob-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:route-table/rtb-0f112cff0c998d196",
            "id": "rtb-0f112cff0c998d196",
            "owner_id": "251973000121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aac177abc90ac005",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ob_public_route_table_igw"
            },
            "tags_all": {
              "Name": "ob_public_route_table_igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ob-igw",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ob-private-subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0229b9733ebceeac5",
            "route_table_id": "rtb-0ec5f8db21adf970e",
            "subnet_id": "subnet-0992653d91cdd1a6e"
          },
          "dependencies": [
            "aws_eip.ob-nat-eip",
            "aws_nat_gateway.ob-nigw",
            "aws_route_table.ob-private-route-table",
            "aws_subnet.ob-private-subnet",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ob-private-subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe637230f70cc92f",
            "route_table_id": "rtb-0ec5f8db21adf970e",
            "subnet_id": "subnet-009fd7883ff12df66"
          },
          "dependencies": [
            "aws_eip.ob-nat-eip",
            "aws_nat_gateway.ob-nigw",
            "aws_route_table.ob-private-route-table",
            "aws_subnet.ob-private-subnet2",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ob-public_subnet_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4ce2292c2ab1ff9",
            "route_table_id": "rtb-0f112cff0c998d196",
            "subnet_id": "subnet-04b712e1b21583771"
          },
          "dependencies": [
            "aws_internet_gateway.ob-igw",
            "aws_route_table.ob-public-route-table",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ob-public_subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ccf81a5f70a9fa",
            "route_table_id": "rtb-0f112cff0c998d196",
            "subnet_id": "subnet-073830bddb1243b24"
          },
          "dependencies": [
            "aws_internet_gateway.ob-igw",
            "aws_route_table.ob-public-route-table",
            "aws_subnet.ob-public-subnet2",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4ce2292c2ab1ff9",
            "route_table_id": "rtb-0f112cff0c998d196",
            "subnet_id": "subnet-04b712e1b21583771"
          },
          "dependencies": [
            "aws_internet_gateway.ob-igw",
            "aws_route_table.ob-public-route-table",
            "aws_subnet.ob-public-subnet",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ob-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:security-group/sg-0140055e0df47a9ff",
            "description": "Permite ingreso http, https y ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0140055e0df47a9ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24"
                ],
                "description": "Allow MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ob-sg",
            "name_prefix": "",
            "owner_id": "251973000121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ob-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ob-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ob-private-subnet",
            "aws_subnet.ob-private-subnet2",
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ob-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:subnet/subnet-0992653d91cdd1a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992653d91cdd1a6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251973000121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ob-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-ob-private-subnet"
            },
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ob-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:subnet/subnet-009fd7883ff12df66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009fd7883ff12df66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251973000121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ob-private-subnet2"
            },
            "tags_all": {
              "Name": "terraform-ob-private-subnet2"
            },
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ob-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:subnet/subnet-04b712e1b21583771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b712e1b21583771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251973000121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ob-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-ob-public-subnet"
            },
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ob-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:subnet/subnet-073830bddb1243b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073830bddb1243b24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251973000121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-ob-public-subnet2"
            },
            "tags_all": {
              "Name": "terraform-ob-public-subnet2"
            },
            "vpc_id": "vpc-0e3e0475841df768c"
          },
          "dependencies": [
            "aws_vpc.ob-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ob-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251973000121:vpc/vpc-0e3e0475841df768c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09211689e77c25be6",
            "default_route_table_id": "rtb-0e29ea89d1bd1cb12",
            "default_security_group_id": "sg-0e030c20da74fdabf",
            "dhcp_options_id": "dopt-0531370d0774b4283",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3e0475841df768c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e29ea89d1bd1cb12",
            "owner_id": "251973000121",
            "tags": {
              "Name": "ob-vpc"
            },
            "tags_all": {
              "Name": "ob-vpc"
            }
          }
        }
      ]
    }
  ]
}